# myyaml

./: .gitignore  404.html  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  index.html  myyaml.c  myyaml.h  sitemap.xml  yamlfy.h  yamly.h
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1-issue.yml  bug.yml  config.yml
.github/workflows/: docs.yml
cmake/: MyyamlConfig.cmake.in  MyyamlConfigVersion.cmake.in  pkg-config.pc.in
docs/: CMakeLists.txt  README.md  tutuorial.md
docs/mkdocs/: mkdocs.yml  requirements.txt
docs/mkdocs/docs/: index.md
examples/: CMakeLists.txt  emit.c  people.h  sample.c
examples/apis/: CMakeLists.txt  get_by_path.c  load_from_file.c  loading.c  sample.c
examples/tutorials/: CMakeLists.txt
examples/tutorials/fruits/: fruit.h  reader.c  writter.c
include/myyaml/: myyaml.h
samples/: CMakeLists.txt  basic.c  emit.c  fruit.h  parse.c  people.h  sample.c
search/: search_index.json
src/: myyaml.c
tests/: CMakeLists.txt  get_by_path.c
tests/cxx/: main.test.cpp
yaml/: fruit.yaml  mapping.yml  people.yml  sequence.yml  strings.yaml
